--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.14",
+    "multer": "^1.4.2",
+    "uuid": "^8.3.2",
     "validator": "^13.6.0"
   }
 }
