--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "CollegeSpace",
+  "name": "collegespace",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,14 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.0.2",
-    "bootstrap-icons": "^1.5.0",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "hbs": "^4.1.2",
-    "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "linkifyjs": "^3.0.0-beta.3",
     "mongoose": "^5.12.14",
     "multer": "^1.4.2",
     "uuid": "^8.3.2",
